src/objects/Family_Story_Guide_Answers__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Story_Guide_Questionare__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Story Guide Questionare</label>
        <referenceTo>Family_Story_Guide_Questionare__c</referenceTo>
        <relationshipLabel>Family Story Guide Answers</relationshipLabel>
        <relationshipName>Family_Story_Guide_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Story_Guide__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Story Guide</label>
        <referenceTo>Family_Story_Guide__c</referenceTo>
        <relationshipLabel>Family Story Guide Answers</relationshipLabel>
        <relationshipName>Family_Story_Guide_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Family Story Guide Answers</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Story Guide Answers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Story Guide Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>